--- a/sass/main.scss
+++ b/sass/main.scss
@@ -50,6 +50,8 @@ ul {
 
 #main {
   min-height: 100%;
+  max-height: 100%;
+  overflow: auto;
 }
 
 .container {
@@ -57,7 +59,6 @@ ul {
   max-width: 1200px;
   margin: 25px auto;
   padding: 15px 15px;
-  overflow: auto;
 
   > p {
     font-size: 12px;
